<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
        -->
    <item
        android:id="@+id/action_set_host"
        android:orderInCategory="1"
        android:title="@string/action_set_host"/>
    <item
        android:id="@+id/action_full_list"
        android:orderInCategory="2"
        android:title="@string/action_full_list"/>
    <item
        android:id="@+id/action_sort_by_devices"
        android:orderInCategory="4"
        android:title="@string/menu_item_sort_by_devices"/>
    <item
        android:id="@+id/action_sort_by_classes"
        android:orderInCategory="4"
        android:title="@string/menu_item_sort_by_classes"/>
    <item
        android:id="@+id/action_sort_by_servers"
        android:orderInCategory="5"
        android:title="@string/menu_item_sort_by_servers"/>
    <item
        android:id="@+id/action_about_filter"
        android:orderInCategory="6"
        android:title="@string/menu_item_about_filter"/>
    <item
        android:id="@+id/action_track_status"
        android:orderInCategory="7"
        android:title="@string/menu_item_track_status"
        android:visible="true"/>
    <item
        android:id="@+id/action_untrack_status"
        android:orderInCategory="7"
        android:title="@string/menu_item_untrack_status"
        android:visible="false"/>


</menu>