<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".SetHostActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/rest_address"
            android:textColor="#ff000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewTangoHost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextTangoHost"
            android:layout_alignLeft="@+id/textViewAddress"
            android:layout_alignParentLeft="true"
            android:text="@string/tango_host"
            android:textColor="#ff000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewTangoPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextTangoPort"
            android:layout_alignParentLeft="true"
            android:text="@string/tango_port"
            android:textColor="#ff000000"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/textNewHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewAddress"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textViewAddress"
            android:ems="10"
            android:hint="@string/new_rest_address"
            android:maxLines="1"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editTextTangoHost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textNewHost"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/textNewHost"
            android:layout_below="@+id/textNewHost"
            android:hint="@string/new_tango_host"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editTextTangoPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textNewHost"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextTangoHost"
            android:hint="@string/new_tango_port"
            android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cancelButton"
            android:onClick="buttonClickOk"
            android:text="@string/ok_button"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClickCancel"
            android:text="@string/cancel_button"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/define_new_host"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff000000"/>

</RelativeLayout>